Change navigation tag, fix spacing and adjust padding and width

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ a:hover {
   width: 8.7em;
   text-align: center;
   font-size: 1em;
-  padding: .5em;
+  padding: 0.7em;
 }
 
 article {
@@ -49,14 +49,14 @@ article {
   max-width: 25em;
 }
 
-nav ol {
+nav span {
   list-style-type: none;
   border-radius: .3em;
   border-width: 3px;
   border-style: solid;
   border-color: #666;
-  width: 9em;
-  padding: 0;
+  width: 5em;
+  padding: .5em;
   text-align: center;
 }
 
@@ -64,7 +64,7 @@ nav a {
   display: inline-block;
   text-align: left;
   text-decoration: none;
-  padding: .5em;
+  padding: 0.5em;
   color: #666;
 }
 
